@@ -18,8 +18,12 @@
  ****************************************************************/
 package org.apache.cayenne.tools.dbimport;
 
+import org.apache.cayenne.configuration.ConfigurationNameMapper;
+import org.apache.cayenne.configuration.DefaultConfigurationNameMapper;
 import org.apache.cayenne.di.Binder;
 import org.apache.cayenne.di.Module;
+import org.apache.cayenne.project.FileProjectSaver;
+import org.apache.cayenne.project.ProjectSaver;
 import org.apache.cayenne.tools.configuration.ToolsModule;
 
 /**
@@ -32,5 +36,7 @@ public class DbImportModule implements Module {
 
     public void configure(Binder binder) {
         binder.bind(DbImportAction.class).to(DbImportAction.class);
+        binder.bind(ProjectSaver.class).to(FileProjectSaver.class);
+        binder.bind(ConfigurationNameMapper.class).to(DefaultConfigurationNameMapper.class);
     }
 }
