@@ -31,6 +31,7 @@ CAY-1763 cdbimport improvements: specified "schema" should become the default sc
 CAY-1764 cdbimport improvements: "overwrite" flag
 CAY-1765 cdbimport improvements: add excludeTables/includeTables parameters
 CAY-1766 Deprecating DataPort ant task
+CAY-1768 cdbimport improvements: DataMap "project-version" attribute is skipped when DM is saved
 
 Bug Fixes:
 
